# carate-pwc

./: .gitignore  .readthedocs.yml  .woodpecker.yml  Graph_karate.ipynb  LICENSE  README.md  install.sh  install_packages.sh  local-ci.sh  prepare-twine copy.sh  prepare-twine.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
carate/: automate.py  automate.pyi  carate.py  config.py  config.pyi  default_interface.py  default_interface.pyi  evaluation.py  load_data.py  load_data.pyi  main.py  model.py  optimizer.py  regression.py  run.py  run.pyi  test_class.py  utils.py
carate/carate_config_files/Classification/: ENZYMES.py  PROTEINS.py  YEAST.py  mcf.py
carate/cli/: automate.py  automate.pyi  plotting.py
carate/config_adapter/: config.py  config.pyi  run.py
carate/evaluation/: base.py  base.pyi  classification.py  classification.pyi  evaluation.py  evaluation.pyi  regression.py  regression.pyi
carate/loader/: load_data.py
carate/logging/: metrics_logger.py
carate/models/: base_model.py  base_model.pyi  cc_classification.py  cc_regression.py  cgc.py  cgc_classification.py  cgc_classification.pyi  cgc_regression.py  cgc_regression.pyi  cgd_regression.py  default_model.py  g_classification.py  g_regression.py  gatv2_classification.py  gatv2_regression.py  gcc_classification.py  gcc_regression.py  graph_transformer_classification.py  graph_transformer_regression.py
carate/optimizer/: optimizer.py  optimizer.pyi
carate/plotting/: base_plots.py  base_plots.pyi  multi_run.py  plot_classification.py  training.py  training.pyi
carate/runner/: run.py  run.pyi
carate/statistics/: analysis.py
carate/utils/: automate.py  convert_to_json.py  convert_to_json.pyi  file_utils.py  load_model.py  main.py  model_files.py  model_files.pyi  training_result_parser.py  training_result_parser.pyi
config_files/Classification/: ENZYMES.py  MCF.py  PROTEINS.py
docs/: requirements.txt
docs/source/: ALCHEMY.py  JSON_start.py  MCF.py  MCF_without_cli.py  analysis.rst  carate.cli.rst  carate.config_adapter.rst  carate.dataset.rst  carate.evaluation.rst  carate.loader.rst  carate.logging.rst  carate.models.rst  carate.optimizer.rst  carate.plotting.rst  carate.rst  carate.runner.rst  carate.statistics.rst  carate.utils.rst  conf.py  index.rst  installation.rst  minimalconfiguration.rst  modules.rst  publication.rst
notebooks/: Analysis.ipynb  Graph_karate.ipynb  Graph_karate_cpu.ipynb  Paper_Graph_carate.ipynb  Plotting.ipynb  tutorial.ipynb
notebooks/config_files/Classification/: ENZYMES.py  MCF.py  MOLT_4.py  PROTEINS.py  YEAST.py  mcf.py
notebooks/config_files/Regression/: ALCHEMY.py  ALCHEMY_no_norm.py  ZINC.py  ZINC_no_norm.py
notebooks/data/CV_0/: ENZYMES.json
notebooks/data/CV_4/: ENZYMES.json
notebooks/data/Classification/ENZYMES/data/CV_1/: ENZYMES.json
notebooks/data/Classification/ENZYMES/data/CV_2/: ENZYMES.json
notebooks/data/Classification/ENZYMES/data/CV_3/: ENZYMES.json
notebooks/data/Regression/ALCHEMY_20_test_training_length_no_norm/data/CV_0/: alchemy_full.json
notebooks/data/Regression/ALCHEMY_20_test_training_length_no_norm/data/CV_1/: alchemy_full.json
tests/: prepare_data.py  test_classification.py  test_cli.py  test_config.py  test_data_loader.py  test_file_utils.py  test_loading.py  test_logger.py  test_plotting.py  test_regression.py  test_run.py  test_runner.py  test_utils_convert_py_to_json.py  utils.py
tests/config/: classification_test_config.py  classification_test_config_no_override.py  classification_test_config_no_override_cpu.py  classification_test_config_override.py  config.py  regression_alchemy_test.py  regression_test_config.py  regression_test_config_no_override.py  regression_test_config_override.py
(+3 files in other folders)
