[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "carate"
version = "0.3.2"
authors = [
  { name="Julian M. Kleber", email="julian.m.kleber@gmail.com" },
]
description = "Providing reproducible modeling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
]
dependencies = [
    "torch==1.13.1",
    "torchvision",
    "torchaudio",
    "torch-geometric",
    "rdkit-pypi",
    "networkx[default]",
    "matplotlib",  
    "Click", 
    "torch-sparse-carate",
    "torch-scatter-carate", 
    "amarium", 
    "black"]

[project.urls]
"Homepage" = "https://www.codeberg.org/sail.black/carate.git"
"Bug Tracker" = "https://www.codeberg.org/sail.black/carate.git/issues"
[tool.setuptools]

packages = ["carate", "carate.evaluation", "carate.models", "carate.plotting", "carate.utils"]
