[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "carate"
version = "0.3.16"
authors = [
  { name="Julian M. Kleber", email="julian.m.kleber@gmail.com" },
]
description = "Chemical and Pharmaceutical Autoencoder - Providing reproducible modelling for quantum chemistry"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
]
dependencies = [
    "torch==1.13.1",
    "torch-sparse-carate",
    "torch-scatter-carate", 
    "torch-geometric",
    "rdkit-pypi",
    "networkx[default]",
    "matplotlib",  
    "Click", 
    "amarium", 
    "black"
    ]

[project.urls]
"Homepage" = "https://www.codeberg.org/sail.black/carate.git"
"Bug Tracker" = "https://www.codeberg.org/sail.black/carate.git/issues"
[tool.setuptools]

packages = ["carate", "carate.optimizer", "carate.dataset", "carate.loader","carate.cli", "carate.evaluation", "carate.cli", "carate.logging", "carate.config_adapter", "carate.statistics", "carate.models", "carate.runner", "carate.plotting", "carate.utils"]
