[metadata]
description-file = README.md

[coverage:run]
branch = True
omit = dist/*, docs/*, notebooks/*, plots/*, tests/*, venv/*  # define paths to omit

[coverage:report]
show_missing = True
skip_covered = True

[tool:pytest]
addopts = -v --cov-report term --cov-report html:htmlcov --cov-report xml --cov-fail-under=0 --cov=carate